--- a/Hannes/Adventure-Pandemonium-master/css/styles.css
+++ b/Hannes/Adventure-Pandemonium-master/css/styles.css
@@ -1,15 +1,77 @@
 body {  background-color: black; }
 
-h1 { color: red; font-size: 250%; }
+h1 { color: rgb(255, 255, 255); font-size: 250%; font-family: "Courier New", monospace; }
 
 h3 { color: red; font-size: 150%; }
 
 i { color: grey; font-size: 125%; }
 
-p { color: white; font-size: 125%; }
+p { color: white; font-size: 125%; margin: 5%; font-size:3vw; }
 
 #dead { color: red; font-size: 150%; font-style: italic ;}
 
-.doorBtn:focus{
-    background-color: yellow;
+.myBtn {
+    color: whitesmoke;
+    background: none;
+    border: none;
+    margin-left: 30px;
+    font-size:1vw;
 }
+
+.myBtn:hover {
+    color: whitesmoke;
+    background: none;
+    border: none;
+    text-shadow: 0 12px 16px 0 rgb(255, 0, 0),0 17px 50px 0 rgb(255, 0, 0);
+    padding: 0;
+    text-decoration: underline;
+  }
+
+  .slidecontainer {
+    width: 100%;
+  }
+  
+  .slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;
+    background: rgb(255, 0, 0);
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .slider:hover {
+    opacity: 1;
+  }
+  
+  
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: rgb(255, 0, 0);
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: rgb(255, 0, 0);
+    cursor: pointer;
+  }
+
+  .para {
+    visibility: hidden;
+  }
+
+  .button {
+      margin-left: 15px;
+      background-color: chartreuse;
+  }
