--- a/Hannes/Adventure-Pandemonium-master/css/styles.css
+++ b/Hannes/Adventure-Pandemonium-master/css/styles.css
@@ -10,7 +10,7 @@ p { color: white; font-size: 125%; margin: 5%; font-size:3vw; }
 
 #dead { color: red; font-size: 150%; font-style: italic ;}
 
-.myBtn {
+.myBtn1 {
     color: whitesmoke;
     background: none;
     border: none;
@@ -18,14 +18,14 @@ p { color: white; font-size: 125%; margin: 5%; font-size:3vw; }
     font-size:1vw;
 }
 
-.myBtn:hover {
+ .myBtn1:hover {
     color: whitesmoke;
     background: none;
     border: none;
     text-shadow: 0 12px 16px 0 rgb(255, 0, 0),0 17px 50px 0 rgb(255, 0, 0);
     padding: 0;
     text-decoration: underline;
-  }
+  } 
 
   .slidecontainer {
     width: 100%;
@@ -71,7 +71,4 @@ p { color: white; font-size: 125%; margin: 5%; font-size:3vw; }
     visibility: hidden;
   }
 
-  .button {
-      margin-left: 15px;
-      background-color: chartreuse;
-  }
+
