--- a/Working Code/With Slider/css/styles.css
+++ b/Working Code/With Slider/css/styles.css
@@ -5,13 +5,15 @@
 
 body {  background-color: var(--black);; overflow: hidden; }
 
-h1 { color: rgb(255, 255, 255); font-size: 250%; font-family: "Courier New", monospace; }
+h1 { color: white; font-size: 150%; margin: 5%; font-family: "Courier New", monospace; }
+
+h2 { color: white; font-size: 110%; margin: 5%; font-family: "Courier New", monospace; }
 
 h3 { color: red; font-size: 150%; }
 
-i { color: grey; font-size: 125%; }
+i { color: white; font-size: 110%; font-family: "Cormorant Garamond" }
 
-p { color: white; font-size: 125%; margin: 5%; font-size:3vw; }
+p { color: white; font-size: 110%; margin: 5%; font-size:1vw; font-family: "Cormorant Garamond" }
 
 #dead { color: red; font-size: 150%; font-style: italic ;}
 
