--- a/Working Code/With Slider/css/styles.css
+++ b/Working Code/With Slider/css/styles.css
@@ -9,7 +9,7 @@ h1 { color: white; font-size: 150%; margin: 5%; font-family: "Courier New", mono
 
 h2 { color: white; font-size: 110%; margin: 5%; font-family: "Courier New", monospace; }
 
-h3 { color: red; font-size: 150%; }
+h3 { color:grey; font-size: 150%; }
 
 i { color: white; font-size: 110%; font-family: "Cormorant Garamond" }
 
@@ -25,6 +25,11 @@ p { color: white; font-size: 110%; margin: 5%; font-size:1vw; font-family: "Corm
   bottom: 10px;
   left: 40%;
 } */
+
+.date {
+  margin-top: 25px;
+  margin-left: 25px;
+}
 
 .choices{
   justify-content: center;
