--- a/Working Code/With Slider/css/styles.css
+++ b/Working Code/With Slider/css/styles.css
@@ -20,6 +20,7 @@ h2 {
   color: white;
   font-size: 110%;
   margin: 5%;
+  font-size: 1.2vw;
   font-family: "Courier New", monospace;
 }
 
@@ -32,15 +33,16 @@ h3 { color:grey; font-size: 150%; }
 i {
   color: white;
   font-size: 110%;
-  font-family: "Cormorant Garamond"
+  font-family: "Roboto";
+  font-size: 1.2vw;
 }
 
 p {
   color: white;
   font-size: 110%;
   margin: 5%;
-  font-size: 1vw;
-  font-family: "Cormorant Garamond"
+  font-family: "Roboto";
+  font-size: 1.2vw;
 }
 
 #dead {
