--- a/Working Code/With Slider/css/styles.css
+++ b/Working Code/With Slider/css/styles.css
@@ -13,7 +13,7 @@ h1 {
   color: whitesmoke;
   font-size: 5vw;
   margin: 5%;
-  font-family: "Roboto";
+  font-family: "Droid Sans", sans-serif;
   text-align: center;
   margin-top: 20%;
 
@@ -31,13 +31,13 @@ h3 {
   color: whitesmoke;
   font-size: 10%;
   margin: 5%;
-  font-family: "Roboto";
+  font-family: "Droid Sans", sans-serif;
 }
 
 i {
   color: whitesmoke;
   font-size: 110%;
-  font-family: "Roboto";
+  font-family: "Droid Sans", sans-serif;
   font-size: 1.2vw;
 }
 
@@ -45,7 +45,7 @@ p {
   color: whitesmoke;
   font-size: 110%;
   margin: 5%;
-  font-family: "Roboto";
+  font-family: "Droid Sans", sans-serif;
   font-size: 1.2vw;
 }
 
