--- a/Michaela/With Slider/css/styles.css
+++ b/Michaela/With Slider/css/styles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+
 :root {
   --black: #000000;
   --white: #ffffff;
@@ -10,40 +13,45 @@ body {
 }
 
 h1 {
-  color: whitesmoke;
+  color: rgb(174, 179, 182);
   font-size: 5vw;
   margin: 5%;
-  font-family: "Droid Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
   text-align: center;
   margin-top: 20%;
 
 }
 
 h2 {
-  color: whitesmoke;
-  font-size: 110%;
+  color:rgb(174, 179, 182);
+  font-size: 100%;
   margin: 5%;
   font-size: 1.2vw;
-  font-family: "Courier New", monospace;
+  font-family: "Roboto Light", sans-serif;
+  font-weight: 300;
 }
 
 h3 {
   color: whitesmoke;
   font-size: 1.2vw;
   margin: 5%;
-  font-family: "Droid Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
 }
 
 h4{
   color: darkgray;
   font-size: 1.2vw;
-  font-family: "Droid Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
 }
 
 i {
   font-size: 110%;
   font-family: "Droid Sans", sans-serif;
   font-size: 1.2vw;
+  font-weight: 500;
 }
 
 p {
@@ -61,14 +69,15 @@ p {
 }
 
 #soul{
-  background-color: black;
-  text-decoration-color: whitesmoke;
+  background-color: rgb(24, 24, 29);
+  text-decoration-color: rgb(224, 226, 209);;
 }
 
 #Sophie{
   background-color: grey;
   text-decoration-color: black;
 }
+
 
 /* .choices {
   display: flex;
@@ -313,7 +322,7 @@ p {
   left: 9%;
   height: 220px;
   width: 360px;
-  background-color: rgb(217, 182, 182);
+  
   border-color: black;
 }
 
@@ -323,7 +332,7 @@ p {
   left: 30%;
   height: 220px;
   width: 360px;
-  background-color: rgb(187, 179, 227);
+  
   border-color: black;
 }
 
@@ -333,7 +342,7 @@ p {
   left: 51%;
   height: 220px;
   width: 360px;
-  background-color: rgb(191, 234, 167);
+  
   border-color: black;
 }
 
@@ -343,7 +352,7 @@ p {
   left: 72%;
   height: 220px;
   width: 360px;
-  background-color: rgb(230, 232, 141);
+  
   border-color: black;
 }
 
@@ -385,4 +394,17 @@ p {
   margin: 35px;
   margin: 10%;
   font-family: 'Brush Script MT', cursive;
+}
+
+/*intro page*/
+.ml12 {
+  font-weight: 200;
+  font-size: 1.8em;
+  text-transform: uppercase;
+  letter-spacing: 0.5em;
+}
+
+.ml12 .letter {
+  display: inline-block;
+  line-height: 1em;
 }
