--- a/Michaela/With Slider/css/styles.css
+++ b/Michaela/With Slider/css/styles.css
@@ -114,7 +114,7 @@ p {
 
 
 .myBtn1 {
-    color: whitesmoke;
+    color: #c6c8c8;
     background: none;
     border: none;
     font-size:1vw;
@@ -123,7 +123,7 @@ p {
 }
 
 .myBtn2 {
-  color: whitesmoke;
+  color: #c6c8c8;
   background: none;
   border: none;
   font-size: 1vw;
@@ -132,7 +132,7 @@ p {
 }
 
 .myBtn3 {
-  color: whitesmoke;
+  color: #c6c8c8;
   background: none;
   border: none;
   font-size: 1vw;
