--- a/Michaela/With Slider/css/styles.css
+++ b/Michaela/With Slider/css/styles.css
@@ -19,7 +19,8 @@ h1 {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   text-align: center;
-  margin-top: 20%;
+  /*margin-top: 20%;*/
+  padding: 20%;
 
 }
 
