--- a/Michaela/Intro/css/styles.css
+++ b/Michaela/Intro/css/styles.css
@@ -20,6 +20,8 @@ h1 {
   font-weight: 300;
   text-align: center;
   /*margin-top: 20%;*/
+  padding: 10% 0 0 0;
+  
   
 
 }
@@ -400,9 +402,10 @@ p {
 /*intro page*/
 .ml12 {
   font-weight: 290;
-  font-size: 2em;
+  font-size: 2.3em;
   text-transform: uppercase;
-  letter-spacing: 0.5em;
+  letter-spacing: 0.3em;
+  
 }
 
 .ml12 .letter {
@@ -412,9 +415,9 @@ p {
 
 .ml13 {
   font-weight: 290;
-  font-size: 2em;
+  font-size: 1.95em;
   text-transform: uppercase;
-  letter-spacing: 0.5em;
+  letter-spacing: 0.16em;
 }
 
 .ml13 .letter {
